--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,6 @@ Homepage: https://github.com/ncode/python-leela
 
 Package: python-leela
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, python-gevent
 Description: Collect and Chart anything
  Collect and Chart anything
