--- a/debian/rules
+++ b/debian/rules
@@ -10,5 +10,4 @@
 #export DH_VERBOSE=1
 
 %:
-	dh $@ 
-	dh --with pydeb --with python2 --namespace leela $@
+	dh $@ --with python2 --namespace leela
