--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Homepage: https://github.com/ncode/python-leela
 
 Package: leela-client
 Architecture: any
+Replaces: python-leela
 Depends: ${shlibs:Depends}, ${misc:Depends}, python-psutil (>= 0.4), python-dnspython
 Description: Collects anything, monitors anything and charts anything
  Collects anything, monitors anything and charts anything
